<resources>
    <string name="app_id">com.example.contacts</string>

    <string name="app_name">Contacts</string>
    <string name="title_activity_main">Contacts</string>
    <string name="title_activity_edit_contact">Edit contact</string>
    <string name="title_activity_add_contact">Create contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search contact</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_delete">Delete</string>

    <string name="menu_home">Contacts</string>
    <string name="temp_header">A</string>

    <string name="text_phone">Phone</string>
    <string name="text_ringtone">Ringtone</string>
    <string name="text_note">Note</string>
    <string name="button_change_avatar">Change</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone">Phone</string>

    <string name="title_dialog_note">Add note</string>
    <string name="hint_dialog_note">Text here</string>
    <string name="dialog_note_button_positive">Accept</string>
    <string name="dialog_note_button_negative">Cancel</string>

    <string name="title_dialog_ringtone">Select ringtone</string>
    <string name="dialog_ringtone_button_positive">Select</string>
    <string name="dialog_ringtone_button_negative">Cancel</string>

    <string name="phone_number_country_code">RU</string>

    <string name="title_dialog_error">Application error</string>
    <string name="error_internal">Internal error</string>
    <string name="error_empty_fields">Please fill in the input fields</string>
    <string name="error_save">Saving error. Try again</string>
    <string name="error_delete">Deleting error. Try again</string>
    <string name="error_deny_permission">Permissions are required to use this feature</string>
    <string name="dialog_error_positive_button">OK</string>
    <string name="title_select_photo">Select a photo</string>

    <string name="text_take_photo">Take photo</string>
    <string name="text_choose_photo">Choose photo</string>

    <string name="message_contact_deleted">Contact deleted</string>
    <string name="message_contact_updated">Contact updated</string>
    <string name="message_contact_created">Contact created</string>
    <string name="message_contact_added_favourites">Contact added to favorites</string>
    <string name="message_contact_delete_favourites">Contact removed from favorites</string>

    <string-array name="array_ringtone">
        <item>Default</item>
        <item>Oreo</item>
        <item>Twix</item>
        <item>Old phone</item>
        <item>Galaxy</item>
        <item>Tribal</item>
        <item>Forest</item>
    </string-array>
</resources>